fix rewrite.yml and reformat code